tests/cases_invalid/assignment_undefined_assignee/.expected
error: could not find `undefined` value
 --> ./cases_invalid/assignment_undefined_assignee/main.shd:4:5
  |
4 |     undefined = value;
  |     ^^^^^^^^^ undefined identifier
  |
